Creazione del Logo e del Titolo con inserimento di un'immagine di sfondo

--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
-        <title></title>
+        <title>Gmail</title>
     </head>
     <body>
+        <header>
+            <div class="header-up">
+                <img id="logo" alt="Gmail" src="http://www.userlogos.org/files/logos/justsayer/gmaillogo.png">
+                <span id="titolo">GMAIL</span>
+            </div>
+        </header>
+        <main>
 
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
