Creazione Form e messaggio con numero cerchiato per completare l'header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
         <header>
             <div class="header-up">
                 <img id="logo" alt="Gmail" src="http://www.userlogos.org/files/logos/justsayer/gmaillogo.png">
-                <span id="titolo">GMAIL</span>
+                <span id="title">GMAIL</span>
+            </div>
+            <hr id="line1">
+            <div class="header-down">
+                <input id="search" type="text" placeholder="Search email">
+                <button id="submit">SEARCH</button>
+                <div class="notification">
+                    You have <span id="number">30</span> unread messages
+                </div>
             </div>
         </header>
         <main>
