Creazione del Main con lista email lette/non lette con inserimento di simbolo e sfondi diversi

--- a/index.html
+++ b/index.html
@@ -21,9 +21,32 @@
                 </div>
             </div>
         </header>
+        <hr>
         <main>
-
+            <div class="email">
+                <div class="email-row read">
+                    <input type="checkbox" name="" value="">
+                    <span class="star" title="Aggiungi a speciali"></span>
+                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                </div>
+                <div class="email-row unread">
+                    <input type="checkbox" name="" value="">
+                    <span class="star" title="Aggiungi a speciali"></span>
+                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                </div>
+                <div class="email-row read">
+                    <input type="checkbox" name="" value="">
+                    <span class="star" title="Aggiungi a speciali"></span>
+                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                </div>
+                <div class="email-row read">
+                    <input type="checkbox" name="" value="">
+                    <span class="star" title="Aggiungi a speciali"></span>
+                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                </div>
+            </div>
         </main>
+        <hr>
         <footer>
 
         </footer>
