Chiusura dell'esercizio con inserimento del Footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </main>
         <hr>
         <footer>
-
-        </footer>
+           GMAIL <span>made with passion by LF</span>
+         </footer>
     </body>
 </html>
