Accorgimenti finali nella modifica di alcune parole nel file HTML

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
                 <div class="email-row read">
                     <input type="checkbox" name="" value="">
                     <span class="star" title="Aggiungi a speciali"></span>
-                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                    <strong>Mail Object</strong><span class="email-text">Mail text</span>
                 </div>
                 <div class="email-row unread">
                     <input type="checkbox" name="" value="">
                     <span class="star" title="Aggiungi a speciali"></span>
-                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                    <strong>Mail Object</strong><span class="email-text">Mail text</span>
                 </div>
                 <div class="email-row read">
                     <input type="checkbox" name="" value="">
                     <span class="star" title="Aggiungi a speciali"></span>
-                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                    <strong>Mail Object</strong><span class="email-text">Mail text</span>
                 </div>
                 <div class="email-row read">
                     <input type="checkbox" name="" value="">
                     <span class="star" title="Aggiungi a speciali"></span>
-                    <strong>Oggetto della email</strong><span class="email-text">testo della email</span>
+                    <strong>Mail Object</strong><span class="email-text">Mail text</span>
                 </div>
             </div>
         </main>
